# FabreXLens

./: .gitignore  BUILD.md  Cargo.toml  README.md  RELEASES.md
.cargo/: config.toml
.github/workflows/: README.md  build.yml  ci.yml
docs/: architecture.md  configuration.md  contributing.md  index.md  installation.md  troubleshooting.md  user-guide.md
docs/api/: README.md
src/: app.rs  cli.rs  config.rs  main.rs
src/services/: auth.rs
src/services/api/: fabrex.rs  gryf.rs  http.rs  mod.rs  redfish.rs  supernode.rs
src/ui/: dashboard.rs  mod.rs  theme.rs
